# godot-package-manager

./: .gitignore  LICENSE  README.md  TODO  gopm.py  package_manager.py  pyproject.toml  update_modules.sh
src/gopm/: __init__.py  __main__.py  git.py  github.py  main.py  project.py  search_provider.py
src/gopm/search/: github.py  search_provider.py
