[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gopm"
version = "3.1.1"
authors = [
  { name="Jummit", email="jummit@web.com" },
]
description = "A package manager for the Godot Engine"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Installation/Setup",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Typing :: Typed",
]
dependencies = [
  "requests",
  "Send2Trash",
]

[project.urls]
"Homepage" = "https://github.com/jummit/godot-package-manager"
"Bug Tracker" = "https://github.com/jummit/godot-package-manager/issues"

[project.scripts]
gopm = "gopm.main:main"